--- a/main.css
+++ b/main.css
@@ -13,6 +13,8 @@
     
     body{
     background-image: url("assets/backgrnd.sg");
+    background-size: cover;
+    background-repeat: no-repeat;
     background-color: rgb(255, 244, 244);
     font-family: 'Roboto Flex';
     background-repeat: no-repeat;
@@ -21,18 +23,12 @@
     
 }
 
-.hero{
-    background-image: url("assets/SVG/assets-bckgrnd.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-background-size: 100%;
-height: 825px;
-
-
-}
 
 .hero-text-container{
+    background-image: url("assets/SVG/assets-bckgrnd.svg");
     position: absolute;
+    font-family: 'Roboto Flex';
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -48,7 +44,7 @@ height: 825px;
 }
 /* how the page wrapper appears on desktop */
 
-@media only screen and (min-width:800px){
+/* @media only screen and (min-width:800px){
 .page-wrapper{
 display: grid;
 grid-gap: 25px;
@@ -75,9 +71,9 @@ grid-area: v;
 
 .alphabet {
 grid-area: a;
-}
+} */
 
-.first-roboto{ 
+/* .first-roboto{ 
     transform: rotate(-7deg);
     text-align: center;
     color: rgb(228, 228, 228);
@@ -153,7 +149,7 @@ grid-area: a;
     left: 10px;
     right: 30px;
   bottom: -200px;
-}
+} */
 
 .explore-ski{
    text-align: center;
