--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-*{
-    border: 3px;
-}
+/* *{
+    border: blue solid 3px;
+} */
 
 @font-face {
     src: url("./fonts/RobotoFlex-VariableFont_GRAD\,XTRA\,YOPQ\,YTAS\,YTDE\,YTFI\,YTLC\,YTUC\,opsz\,slnt\,wdth\,wght.woff2") format("woff2"),
@@ -18,14 +18,11 @@
     background-color: rgb(255, 244, 244);
     font-family: 'Roboto Flex';
     background-repeat: no-repeat;
-    background-size: coer;
-    
-    
+    background-size: cover;
 }
 
 
 .hero-text-container{
-    background-image: url("assets/SVG/assets-bckgrnd.svg");
     position: absolute;
     font-family: 'Roboto Flex';
 
@@ -36,6 +33,27 @@
 
     /* font-size: 50px; */
     /* width: 80%; */
+    }
+/* Roboto text styling */
+    h3{
+        /* position: absolute; */
+        margin-bottom: 145px;
+        margin-top: 150px;
+        font-size: 200px;
+        font-variation-settings: "wght" 800 ;
+        transform: rotate(-7deg);
+        text-align: center;
+    }
+    /* flex text styling */
+    h4{
+        /* position: absolute; */
+        margin-top: 70px;
+        margin-bottom: -10px;
+        font-size: 200px;
+        font-variation-settings: "wght" 800 ;
+        transform: rotate(19deg);
+        text-align: center;
+    
     }
 /* how the page wrapper will appear on mobile */
 .page-wrapper{
@@ -73,41 +91,40 @@ grid-area: v;
 grid-area: a;
 } */
 
-/* .first-roboto{ 
-    transform: rotate(-7deg);
+.first-roboto{ 
+    /* transform: rotate(-7deg); */
     text-align: center;
     color: rgb(228, 228, 228);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 60px;
     bottom: -5%;
 }
 
 .second-roboto{
-    transform: rotate(-7deg);
+    /* transform: rotate(-7deg); */
     text-align: center;
     color: rgb(169, 169, 169);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 50px;
     bottom: -5%;
 }
 
-}
 .third-roboto{
-    transform: rotate(-7deg);
+    /* transform: rotate(-7deg); */
     text-align: center;
     color: rgb(86, 86, 86);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 40px;
     bottom: -5%;
 }
 
 .fourth-roboto{
-    transform: rotate(-7deg);
+    /* transform: rotate(-7deg); */
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 30px;
     bottom: -5%;
@@ -115,41 +132,41 @@ grid-area: a;
 }
 
 .first-flex{
-    transform: rotate(19deg);
+    /* transform: rotate(19deg); */
     text-align: center;
     color: rgb(228, 228, 228);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 60px;
-    bottom: -200px;
+    bottom: -5%;
 }
     
 .second-flex{
-    transform: rotate(19deg);
+    /* transform: rotate(19deg); */
     text-align: center;
     color: rgb(169, 169, 169);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 50px;
-    bottom: -200px;
+    bottom: -5%;
 }
 .third-flex{
-    transform: rotate(19deg);
+    /* transform: rotate(19deg); */
     text-align: center;
     color: rgb(86, 86, 86);
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 40px;
-    bottom: -200px;
+    bottom: -5%;
 }
 .fourth-flex{
-    transform: rotate(19deg);
+    /* transform: rotate(19deg); */
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 10px;
     right: 30px;
-  bottom: -200px;
-} */
+    bottom: -5%;
+}
 
 .explore-ski{
    text-align: center;
@@ -205,28 +222,6 @@ h5{ font-size: 60px;
 h2{
     font-size: 30px;
     font-variation-settings: "wght" 700, "wdth" 55, "opsz" 96, "GRAD" -131, "slnt" -7, "XTRA" 468, "XOPQ" 96, "YOPQ" 79, "YTLC" 514, "YTUC" 528, "YTAS" 854, "YTDE" -203, "YTFI" 738
-
-}
-    
-/* variable font animation */
-h3{
-    margin-bottom: 145px;
-    margin-top: 150px;
-    font-size: 200px;
-    font-variation-settings: "wght" 800 ;
-    transform: rotate(-7deg);
-    text-align: center;
-}
-
-h4{
-    margin-top: 70px;
-    margin-bottom: -10px;
-    font-size: 200px;
-    font-variation-settings: "wght" 800 ;
-    transform: rotate(19deg);
-    text-align: center;
-
-
 
 }
 
